# Mahalli-tauri

./: .eslintrc-auto-import.json  .eslintrc.cjs  .prettierrc.json  LICENSE  Makefile  README.md  app.vue  auto-imports.d.ts  bun.lockb  change-extention.bat  components.json  env.d.ts  eslint.config.mjs  i18n.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
.github/workflows/: config.yml  lint.yml  releases.yml
assets/css/: tailwind.css
components/: ChartHolder.vue  ClientCreate.vue  ClientDelete.vue  ClientProfile.vue  ClientUpdate.vue  ClientsTable.vue  CsvUploader.vue  InventoryTable.vue  InventoryUpdate.vue  InvoiceCreate.vue  InvoiceDelete.vue  InvoiceUpdate.vue  InvoicesTable.vue  ModalComponentsRenderer.vue  ModalError.vue  ModalLoading.vue  Modals.vue  ModalsWrapper.vue  Navigation.vue  OrderCreate.vue  OrderDelete.vue  OrderUpdate.vue  OrdersTable.vue  PdfViewer.vue  ProductCreate.vue  ProductDelete.vue  ProductUpdate.vue  ProductsTable.vue  QuoteCreate.vue  QuoteDelete.vue  QuoteUpdate.vue  QuotesTable.vue  SideBar.vue  SupplierCreate.vue  SupplierDelete.vue  SupplierUpdate.vue  SuppliersTable.vue  TemplateForm.vue  TranslationModal.vue
composables/: useModal.ts  useNumberToText.ts  useNumberToWord.ts  usePdfGenerator.ts  useStore.ts  useUpdateQuery.ts
consts/: index.ts  status.ts
db/: index.ts  package-lock.json  package.json
db/prisma/: db.sqlite  db.sqlite-journal  schema.prisma
lang/: ar-AE.json  de-DE.json  en-US.json  fr-FR.json
layouts/: default.vue
pages/: dashboard.vue  index.vue  inventory.vue  products.vue  settings.vue
pages/clients/: [id].vue  index.vue
pages/dashboard/: index.vue
pages/inventory/: index.vue
pages/invoices/: [id].vue  index.vue
pages/orders/: [id].vue  index.vue
pages/products/: index.vue
pages/quotes/: [id].vue  index.vue
pages/settings/: index.vue
pages/suppliers/: [id].vue  index.vue
plugins/: fade.client.ts  modal.ts
schemas/: client.schema.ts  inventory.schema.ts  invoice.schema.ts  order.schema.ts  products.schema.ts  quote.schema.ts  supplier.schema.ts
scripts/: update-version.sh
src/: App.vue  i18n.ts  main.ts  pinia.ts  store.ts
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  mahalli.sqlite  mahalli.sqlite-journal  schema.sql  stocker.db  stocker.sqlite  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/data/: clients.csv  db.sqlite  inventory_mouvements.csv  invoice_items.csv  invoices.csv  order_items.csv  orders.csv  products.csv  products.sql  sellers.csv
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: clients.rs  inventory_mouvements.rs  inventory_movements.rs  inventory_transactions.rs  invoice_items.rs  invoices.rs  lib.rs  order_items.rs  orders.rs  prelude.rs  products.rs  quote_items.rs  quotes.rs  sellers.rs  suppliers.rs  templates.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_init_.rs  m20240216_201704_seed_init_.rs  m20240224_175322_status_index_.rs  m20240609_135936_add_prices.rs  m20241020_121048_templates.rs  utils.rs
src-tauri/migrations/2022-10-19-055104/: down.sql  up.sql
src-tauri/migrations/2022-10-19-055104_create_channels/: up.sql
src-tauri/migrations/2022-10-19-first/: down.sql  up.sql
src-tauri/migrations/2023-11-05-120135_init/: up.sql
src-tauri/migrations/2023-11-06-114813_add_currency/: up.sql
src-tauri/migrations/2023-11-06-114845_drop_tva/: up.sql
src-tauri/migrations/2023-9-24-uuid/: up.sql
src-tauri/service/: Cargo.toml
src-tauri/service/src/: lib.rs  models.rs  mutaion.rs  mutation.rs  mutations.rs  queries.rs  query.rs  sql.sql  transaction.rs  transactions.rs
src-tauri/service/src/models/: client.rs  dashboard.rs  inventory.rs  invoice.rs  invoice_item.rs  mod.rs  order.rs  order_item.rs  product.rs  quote.rs  quote_item.rs  seller.rs  shared.rs  supplier.rs  template.rs
src-tauri/src/: cmd.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  types.rs
src-tauri/src/commands/: clients.rs  dashboard.rs  inventory.rs  invoice_items.rs  invoices.rs  mod.rs  order_items.rs  orders.rs  products.rs  quote_items.rs  quotes.rs  sellers.rs  suppliers.rs  templates.rs
src-tauri/src/csvImpExp/: mod.rs
src-tauri/src/csv_thingy/: exp_emp.rs  export.rs  import.rs  mod.rs  schema.rs
src-tauri/src/csvparsing/: export.rs  import.rs  mod.rs  records.rs  schema.rs
src-tauri/src/jobs/: db.rs  image_optimizer.rs  mod.rs  text.txt  utils.rs
src-tauri/src/jobs/images/: image_optimizer.rs  mod.rs  utils.rs
src-tauri/src/queries/: product.rs
src-tauri/src/reposotories/: client_repo.rs  cmd.rs  inventory_mvm_repo.rs  invoice_item_repo.rs  invoice_repo.rs  mod.rs  order_item_repo.rs  order_repo.rs  product_repo.rs  seller_repo.rs  stats_repo.rs  user_repo.rs
src/animations/: 66291-meditative-business-man.json
src/assets/: main.css
src/components/: ChartBar.vue  ChartBart.tsx  ChartDoughnut.vue  ChartHolder.tsx  ChartHolder.vue  ChartLine.tsx  ChartLine.vue  ClientAdditional.tsx  ClientCard.tsx  ClientCreate.tsx  ClientCreate.vue  ClientCredi.tsx  ClientDelete.tsx  ClientDelete.vue  ClientDetails.vue  ClientProfile.vue  ClientTable.tsx  ClientUpdate.tsx  ClientUpdate.vue  ClientsTable.tsx  ClientsTable.vue  CommandCreate.tsx  CommandDelete.tsx  CommandTable.tsx  CommandUpdate.tsx  CrediCreate.tsx  CrediDelete.tsx  CrediTable.tsx  CsvUploader.tsx  CsvUploader.vue  Error.vue  InventoryCreate.tsx  InventoryCreate.vue  InventoryTable.tsx  InventoryTable.vue  InventoryUpdate.vue  InvoiceCreate.tsx  InvoiceCreate.vue  InvoiceDelete.tsx  InvoiceDelete.vue  (+57 more)
types/: client.ts  index.d.ts  index.ts  inventory.ts  invoice.ts  order.ts  product.ts  quote.ts  supplier.ts
utils/: fs.ts  shadcn.ts  store.ts
(+346 files in other folders)
