[package]
name = "mahalli"
version = "1.9.9"
description = "Inventory & invoicing management app"
authors = ["AbdelilahOu"]
license = ""
repository = "https://github.com/AbdelilahOu/Mahalli-desktop"
default-run = "mahalli"
edition = "2021"
rust-version = "1.82"
build = "src/build.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [".", "service", "entity", "migration"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
apalis = { version = "0.5", features = [
  "sqlite",
  "limit",
  "tracing",
  "tokio-comp",
] }
tokio = { version = "1", features = ["full"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
dotenvy = "0.15.7"
log = "^0.4"
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }
image = "0.25.5"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
dirs = "5.0.1"


[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["sqlite"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
